--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
             <div class="col-lg-6">
               <h3 class="resume-title">Professional Experience</h3>
               <div class="resume-item">
-                <h4>Software Engineering Intern</h4>
+                <h4>Kensho - Software Engineering Intern</h4>
                 <h5>May 2023 - August 2023</h5>
                 <p><em>Cambridge, MA</em></p>
                 <ul>
@@ -351,7 +351,7 @@
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Software Engineering Intern</h4>
+                <h4>Amazon - Software Engineering Intern</h4>
                 <h5>May 2022 - August 2022</h5>
                 <p><em>Seattle, WA</em></p>
                 <ul>
@@ -373,7 +373,7 @@
                 </ul>
               </div>
               <div class="resume-item">
-                <h4>Software Engineering Intern</h4>
+                <h4>Datadog - Software Engineering Intern</h4>
                 <h5>January 2022 - April 2022</h5>
                 <p><em>New York, NY</em></p>
                 <ul>
