Add more bio and cover letter

--- a/index.html
+++ b/index.html
@@ -130,6 +130,23 @@
               things developer experience: neovim, tmux, window managers, split
               keyboards, and more!
             </p>
+            <br />
+            <p>
+              I have a Bachelor's Degree in Computer Science from Georgia Tech,
+              where I developed an educational foundation in Computer Science. I
+              was a teaching assistant for two classes: Data Structures and
+              Algorithms, and Introduction to Computer Systems and Networks. I
+              believe that foundational Computer Science concepts can be
+              beautiful, and I love sharing its beauty with other people.
+            </p>
+            <br />
+            <p>
+              From a professional perspective, I have interned at companies of
+              all sizes, and I am confident that I can learn and contribute to
+              almost any codebase. I enjoy hearing about different perspectives
+              as a software engineer, so please feel free to reach out by
+              connecting on LinkedIn or sending me an email.
+            </p>
           </div>
 
           <div class="row">
@@ -393,6 +410,21 @@
         </div>
       </section>
       <!-- End Resume Section -->
+
+      <section id="services" class="services">
+        <div class="container" data-aos="fade-up">
+          <div class="section-title">
+            <h2>Cover Letter</h2>
+            <a
+              href="https://docs.google.com/document/d/1YN9S1Q_qikQSSqSFVZMwt1uRsAnAO3dNAPmEmpfvimg/edit?usp=sharing"
+            >
+              <p>
+                Click here to see my cover letter for employment at Datadog.
+              </p>
+            </a>
+          </div>
+        </div>
+      </section>
 
       <!-- ======= Services Section ======= -->
       <section id="services" class="services">
